<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <!--            Txtt VIew Jamaat Time -->


            <TextView
                android:id="@+id/TextViewJamaatTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/helvetica_regular"
                android:text="@string/jamaat_time"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent" />

            <!--    Fajr prayer Cardview-->


            <LinearLayout
                android:id="@+id/cardViewFajr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:background="@color/white"
                android:weightSum="3"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/helvetica_regular"
                    android:text="@string/fajr"
                    android:textAlignment="gravity"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                     />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/helvetica_regular"
                    android:gravity="center"
                    android:text="@string/_04_28_am"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                     />

                <TextView
                    android:id="@+id/TextviewButtonFajr"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:fontFamily="@font/helvetica_regular"
                    android:text="@string/edit2"
                    android:textAlignment="textEnd"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    android:textColor="@color/Color1st" />
            </LinearLayout>


            <!--     Duhr Prayer CardView-->

            <LinearLayout
                android:id="@+id/cardViewDuhr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/white"

                android:weightSum="3"
                app:layout_constraintStart_toStartOf="@id/constraintparent"
                app:layout_constraintTop_toBottomOf="@id/cardViewFajr">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/helvetica_regular"
                    android:text="@string/duhr"
                    android:textAlignment="gravity"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                     />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/helvetica_regular"
                    android:gravity="center"
                    android:text="@string/_12_38_pm"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                     />

                <TextView
                    android:id="@+id/TextviewButtonDuhr"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:fontFamily="@font/helvetica_regular"
                    android:text="@string/edit"
                    android:textSize="14sp"
                    android:textAlignment="textEnd"
                    android:textAllCaps="false"
                    android:textColor="@color/Color1st" />
            </LinearLayout>

            <!--     Asr Prayer CardView-->


            <!--     Maghrib Prayer CardView-->

            <LinearLayout
                android:id="@+id/cardViewAsr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/white"
                android:weightSum="3"
                app:layout_constraintStart_toStartOf="@id/constraintparent"
                app:layout_constraintTop_toBottomOf="@+id/cardViewDuhr">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/helvetica_regular"
                    android:text="@string/asr"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                     />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/helvetica_regular"
                    android:gravity="center"
                    android:text="@string/_05_19_pm"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                     />

                <TextView
                    android:id="@+id/EditButtonAsr"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:fontFamily="@font/helvetica_regular"
                    android:text="@string/ed"
                    android:textSize="14sp"
                    android:textAlignment="textEnd"
                    android:textAllCaps="false"
                    android:textColor="@color/Color1st" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cardViewMaghrib"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/white"

                app:layout_constraintEnd_toEndOf="@id/constraintparent"
                app:layout_constraintTop_toBottomOf="@+id/cardViewAsr">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/helvetica_regular"
                    android:text="@string/maghrib"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                  />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/helvetica_regular"
                    android:gravity="center"
                    android:text="@string/_07_22_pm"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                  />

                <TextView
                    android:id="@+id/EditButtonMaghrib"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:fontFamily="@font/helvetica_regular"
                    android:text="@string/edit"
                    android:textSize="14sp"
                    android:textAlignment="textEnd"
                    android:textAllCaps="false"
                    android:textColor="@color/Color1st" />
            </LinearLayout>

            <!--    Announcmet Tabvew Button-->

            <!--Profile Tabview Button   -->


            <!--     Isha Prayer CardView-->
            <LinearLayout
                android:id="@+id/cardViewIsha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/white"

                app:layout_constraintStart_toStartOf="@id/constraintparent"
                app:layout_constraintTop_toBottomOf="@+id/cardViewMaghrib">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/helvetica_regular"
                    android:text="@string/isha"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                     />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/helvetica_regular"
                    android:gravity="center"
                    android:text="@string/_08_49_pm"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                     />

                <TextView
                    android:id="@+id/EditButtonIsha"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:fontFamily="@font/helvetica_regular"
                    android:text="@string/edit3"
                    android:textSize="14sp"
                    android:textAlignment="textEnd"
                    android:textAllCaps="false"
                    android:textColor="@color/Color1st" />

            </LinearLayout>


            <!--     Jummah Prayer CardView-->
            <LinearLayout
                android:id="@+id/CardViewJummah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/white"

                app:layout_constraintStart_toStartOf="@id/constraintparent"
                app:layout_constraintTop_toBottomOf="@+id/cardViewIsha"

                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/helvetica_regular"
                    android:text="@string/jummah"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/helvetica_regular"
                    android:gravity="center"
                    android:text="@string/_12_38_pm_2"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                />

                <TextView

                    android:id="@+id/EditButtonJummah"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:fontFamily="@font/helvetica_regular"
                    android:text="@string/edit4"
                    android:textSize="14sp"
                    android:textAlignment="textEnd"
                    android:textAllCaps="false"
                    android:textColor="@color/Color1st" />


            </LinearLayout>

            <Button
                android:id="@+id/saveButoon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="29dp"
                android:background="@drawable/radius_save"
                android:fontFamily="@font/helvetica_regular"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"

                />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>