<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        app:layout_constraintVertical_weight="1"
        android:layout_height= "wrap_content"
        android:gravity="center"
        android:text="@string/_50_nsubscribers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.748"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.087"
        android:letterSpacing="-0.01"
        android:textSize="13sp"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Color1st"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/admin_masjid_detail"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:letterSpacing="-0.02"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/Color1st"
            android:drawableStart="@drawable/ic_baseline_arrow_back_ios_new_24" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="1"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        android:foregroundGravity="center"
        android:outlineSpotShadowColor="@color/white"
        app:cardBackgroundColor="@color/Color2nd"
        app:cardCornerRadius="160dp"
        app:cardElevation="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.034">


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        app:layout_constraintVertical_weight="1"
        android:layout_height= "wrap_content"
        android:gravity="center"

        android:text="@string/_30_nannouncments"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.088"
        android:textSize="13sp"/>

    <TextView
        app:layout_constraintVertical_weight="1"
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Jamia masjid Abu bakkar Siddique raziallah tala anhu"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.082"
        tools:layout_editor_absoluteX="20dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        app:layout_constraintVertical_weight="1"
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_location_on_24"
        android:text="Lahore,Pakistan,punjab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.017" />

    <Button
        app:layout_constraintVertical_weight="1"
        android:layout_width="110dp"
        android:layout_height="42dp"
        android:background="@drawable/radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.036"
        android:text="Jamaat"
        android:textAllCaps="false"
        android:textColor="@color/white"
       />

    <!--        <view class="android.widget.TextView"-->
<!--            android:text="Jamaat"/>-->
<!--    </Button>-->

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="112dp"
        android:background="@color/white"
        android:outlineSpotShadowColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView5"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:text="Maghrib"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:text="07:22 PM"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginRight="20dp"
            android:background="@color/white"
            android:text="Edit"
            android:textAllCaps="false"
            android:textColor="@color/Color1st" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="208dp"
        android:background="@color/white"
        android:outlineSpotShadowColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:text="Duhr"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:text="12:38 PM"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginRight="20dp"
            android:background="@color/white"
            android:text="Edit"
            android:textAllCaps="false"
            android:textColor="@color/Color1st" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="160dp"
        android:background="@color/white"
        android:outlineSpotShadowColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView6"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:text="Asr"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:text="05:19 PM"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginRight="20dp"
            android:background="@color/white"
            android:text="Edit"
            android:textAllCaps="false"
            android:textColor="@color/Color1st" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="256dp"
        android:background="@color/white"
        android:outlineSpotShadowColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:text="Fajr"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:text="04:28 AM"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginRight="20dp"
            android:background="@color/white"
            android:text="Edit"
            android:textAllCaps="false"
            android:textColor="@color/Color1st" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="64dp"
        android:background="@color/white"
        android:outlineSpotShadowColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:text="Isha"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="91dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:text="08:49 PM"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginRight="20dp"
            android:background="@color/white"
            android:text="Edit"
            android:textAllCaps="false"
            android:textColor="@color/Color1st" />
    </androidx.cardview.widget.CardView>

    <Button
        app:layout_constraintVertical_weight="1"
        android:id="@+id/button"
        android:layout_width="110dp"
        android:layout_height="42dp"
        android:background="@drawable/radius_2"
        android:outlineSpotShadowColor="@color/white"
        android:text="Announcment"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.031" />

    <Button
        app:layout_constraintVertical_weight="1"
        android:layout_width="110dp"
        android:layout_height="42dp"
        android:background="@drawable/radius_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.034"
        android:text="Profile"
        android:textAllCaps="false"
        android:outlineSpotShadowColor="@color/white"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:outlineSpotShadowColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:text="Jummah"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:text="12:38 PM"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginRight="20dp"
            android:background="@color/white"
            android:text="Edit"
            android:textAllCaps="false"
            android:textColor="@color/Color1st" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>



